ui_tests/tests/should-fail/2_1-flex-mod-only-mod.rs
use flex_mod::flex_mod;

fn main() {}

#[flex_mod(define_foo)]
fn an_fn() {}
